[package]
name = "tower-sessions-rorm-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# SessionStore interface
tower-sessions = { version = "~0.12" }
# required for SessionStore trait
async-trait = "0.1.79"
# required for SessionStore trait
serde_json = { version = "~1" }

# ORM
rorm = { version = "~0.6", default-features = false, features = ["postgres-only", "time", "uuid"] }
uuid = { version = "~1" }

[features]
postgres-only = ["rorm/postgres-only"]
