[workspace]
members = [
    ".",
    "./example",
]

[package]
name = "tower-sessions-rorm-store"
version = "0.1.1"
edition = "2021"
description = "Session Store implementation for rorm"
authors = ["Niklas Pfister <git@omikron.dev>"]
license = "MPL-2.0"

[package.metadata.docs.rs]
features = ["__ci"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# SessionStore interface
tower-sessions = { version = "~0.12" }
# required for SessionStore trait
async-trait = "~0.1"
# required for SessionStore trait
serde_json = { version = "~1" }

# Error management
thiserror = { version = "~1" }
base64 = { version = "~0.22" }

# ORM
rorm = { version = "~0.6", default-features = false, features = ["time"] }
uuid = { version = "~1" }

[features]
# This feature is used to provide a way to compile the library,
# as rorm requires at least one driver to be active
__ci = ["rorm/default"]
