[package]
name = "example"
version = "0.1.0"
edition = "2021"
authors = ["Niklas Pfister <git@omikron.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# webframework
axum = { version = "~0.7" }
tower-sessions-rorm-store = { version = "*", path = ".." }

# orm
rorm = { version = "~0.6", features = ["time", "tokio", "cli"] }
time = { version = "~0.3" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["rt-multi-thread", "macros"] }

[features]
rorm-main = []